parser/CKBParser.py
# Generated from CKB.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CKBParser ( Parser ):

    grammarFileName = "CKB.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'signature'", "','", "'conditionals'", 
                     "'{'", "'}'", "'('", "'|'", "')'", "'!'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "WS", 
                      "COMMENT", "BLOCKCOMMENT", "NEWLINE" ]

    RULE_ckbs = 0
    RULE_signature = 1
    RULE_myid = 2
    RULE_conditionals = 3
    RULE_condition = 4
    RULE_formula = 5

    ruleNames =  [ "ckbs", "signature", "myid", "conditionals", "condition", 
                   "formula" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    ID=11
    WS=12
    COMMENT=13
    BLOCKCOMMENT=14
    NEWLINE=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CkbsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def signature(self):
            return self.getTypedRuleContext(CKBParser.SignatureContext,0)


        def conditionals(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CKBParser.ConditionalsContext)
            else:
                return self.getTypedRuleContext(CKBParser.ConditionalsContext,i)


        def getRuleIndex(self):
            return CKBParser.RULE_ckbs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCkbs" ):
                return visitor.visitCkbs(self)
            else:
                return visitor.visitChildren(self)




    def ckbs(self):

        localctx = CKBParser.CkbsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ckbs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.signature()
            self.state = 14 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 13
                self.conditionals()
                self.state = 16 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3 or _la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def myid(self):
            return self.getTypedRuleContext(CKBParser.MyidContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CKBParser.NEWLINE)
            else:
                return self.getToken(CKBParser.NEWLINE, i)

        def getRuleIndex(self):
            return CKBParser.RULE_signature

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignature" ):
                return visitor.visitSignature(self)
            else:
                return visitor.visitChildren(self)




    def signature(self):

        localctx = CKBParser.SignatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_signature)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 18
                self.match(CKBParser.NEWLINE)
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(CKBParser.T__0)
            self.state = 26 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 25
                self.match(CKBParser.NEWLINE)
                self.state = 28 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==15):
                    break

            self.state = 30
            self.myid()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MyidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.num = None # Token

        def myid(self):
            return self.getTypedRuleContext(CKBParser.MyidContext,0)


        def ID(self):
            return self.getToken(CKBParser.ID, 0)

        def NEWLINE(self):
            return self.getToken(CKBParser.NEWLINE, 0)

        def getRuleIndex(self):
            return CKBParser.RULE_myid

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyid" ):
                return visitor.visitMyid(self)
            else:
                return visitor.visitChildren(self)




    def myid(self):

        localctx = CKBParser.MyidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_myid)
        try:
            self.state = 37
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                localctx.num = self.match(CKBParser.ID)
                self.state = 33
                self.match(CKBParser.T__1)
                self.state = 34
                self.myid()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                localctx.num = self.match(CKBParser.ID)
                self.state = 36
                self.match(CKBParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(CKBParser.ID, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CKBParser.NEWLINE)
            else:
                return self.getToken(CKBParser.NEWLINE, i)

        def condition(self):
            return self.getTypedRuleContext(CKBParser.ConditionContext,0)


        def conditionals(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CKBParser.ConditionalsContext)
            else:
                return self.getTypedRuleContext(CKBParser.ConditionalsContext,i)


        def getRuleIndex(self):
            return CKBParser.RULE_conditionals

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionals" ):
                return visitor.visitConditionals(self)
            else:
                return visitor.visitChildren(self)




    def conditionals(self):

        localctx = CKBParser.ConditionalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_conditionals)
        self._la = 0 # Token type
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 39
                    self.match(CKBParser.NEWLINE)
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 45
                self.match(CKBParser.T__2)
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 46
                    self.match(CKBParser.NEWLINE)
                    self.state = 49 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==15):
                        break

                self.state = 51
                localctx.name = self.match(CKBParser.ID)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 52
                    self.match(CKBParser.NEWLINE)
                    self.state = 57
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 58
                self.match(CKBParser.T__3)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 59
                    self.match(CKBParser.NEWLINE)
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 65
                self.match(CKBParser.T__4)
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 66
                        self.match(CKBParser.NEWLINE) 
                    self.state = 71
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 72
                    self.match(CKBParser.NEWLINE)
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 78
                self.match(CKBParser.T__2)
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 79
                    self.match(CKBParser.NEWLINE)
                    self.state = 82 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==15):
                        break

                self.state = 84
                localctx.name = self.match(CKBParser.ID)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 85
                    self.match(CKBParser.NEWLINE)
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 91
                self.match(CKBParser.T__3)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 92
                    self.match(CKBParser.NEWLINE)
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 98
                self.condition()
                self.state = 99
                self.match(CKBParser.T__4)
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 100
                        self.match(CKBParser.NEWLINE) 
                    self.state = 105
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 106
                        self.conditionals() 
                    self.state = 111
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.consequent = None # FormulaContext
            self.antecedent = None # FormulaContext

        def condition(self):
            return self.getTypedRuleContext(CKBParser.ConditionContext,0)


        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CKBParser.FormulaContext)
            else:
                return self.getTypedRuleContext(CKBParser.FormulaContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CKBParser.NEWLINE)
            else:
                return self.getToken(CKBParser.NEWLINE, i)

        def getRuleIndex(self):
            return CKBParser.RULE_condition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = CKBParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(CKBParser.T__5)
                self.state = 115
                localctx.consequent = self.formula(0)
                self.state = 116
                self.match(CKBParser.T__6)
                self.state = 117
                localctx.antecedent = self.formula(0)
                self.state = 118
                self.match(CKBParser.T__7)
                self.state = 119
                self.match(CKBParser.T__1)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 120
                    self.match(CKBParser.NEWLINE)
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 126
                self.condition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(CKBParser.T__5)
                self.state = 129
                localctx.consequent = self.formula(0)
                self.state = 130
                self.match(CKBParser.T__6)
                self.state = 131
                localctx.antecedent = self.formula(0)
                self.state = 132
                self.match(CKBParser.T__7)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 133
                    self.match(CKBParser.NEWLINE)
                    self.state = 138
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CKBParser.RULE_formula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class OrContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CKBParser.FormulaContext
            super().__init__(parser)
            self.left = None # FormulaContext
            self.right = None # FormulaContext
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CKBParser.FormulaContext)
            else:
                return self.getTypedRuleContext(CKBParser.FormulaContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class NegationContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CKBParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(CKBParser.FormulaContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegation" ):
                return visitor.visitNegation(self)
            else:
                return visitor.visitChildren(self)


    class VarContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CKBParser.FormulaContext
            super().__init__(parser)
            self.atom = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CKBParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CKBParser.FormulaContext
            super().__init__(parser)
            self.left = None # FormulaContext
            self.right = None # FormulaContext
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CKBParser.FormulaContext)
            else:
                return self.getTypedRuleContext(CKBParser.FormulaContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class ParenContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CKBParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(CKBParser.FormulaContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParen" ):
                return visitor.visitParen(self)
            else:
                return visitor.visitChildren(self)



    def formula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CKBParser.FormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_formula, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                localctx = CKBParser.NegationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 142
                self.match(CKBParser.T__8)
                self.state = 143
                self.formula(5)
                pass
            elif token in [6]:
                localctx = CKBParser.ParenContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 144
                self.match(CKBParser.T__5)
                self.state = 145
                self.formula(0)
                self.state = 146
                self.match(CKBParser.T__7)
                pass
            elif token in [11]:
                localctx = CKBParser.VarContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 148
                localctx.atom = self.match(CKBParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 159
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 157
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
                    if la_ == 1:
                        localctx = CKBParser.AndContext(self, CKBParser.FormulaContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 151
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 152
                        self.match(CKBParser.T__1)
                        self.state = 153
                        localctx.right = self.formula(5)
                        pass

                    elif la_ == 2:
                        localctx = CKBParser.OrContext(self, CKBParser.FormulaContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 154
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 155
                        self.match(CKBParser.T__9)
                        self.state = 156
                        localctx.right = self.formula(4)
                        pass

             
                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[5] = self.formula_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def formula_sempred(self, localctx:FormulaContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         




